--- a/Dyder/Dyder.API/appsettings.json
+++ b/Dyder/Dyder.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts":"*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=dyderhomologacao.cbxt2zanfxz2.sa-east-1.rds.amazonaws.com; database=DyderHomologacao; user=admin; password=admin!!!"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  }
 }
