--- a/Dyder/Dyder.Repository/Dyder.Repository.csproj
+++ b/Dyder/Dyder.Repository/Dyder.Repository.csproj
@@ -11,6 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.5" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dyder.Domain\Dyder.Domain.csproj" />
   </ItemGroup>
 
