--- a/Dyder/Dyder.Domain/Dyder.Domain.csproj
+++ b/Dyder/Dyder.Domain/Dyder.Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Dto\Response\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.5" />
+  </ItemGroup>
+
 </Project>
